--- a/02_Greenhouse_Trials.Rmd
+++ b/02_Greenhouse_Trials.Rmd
@@ -115,9 +115,9 @@ anova_analysis <- function(x, dv) {
       dplyr::rename(var = sym(dv)) %>% 
       droplevels() %>% 
       dplyr::mutate(Soil_Type = factor(Soil_Type, levels = c("Invaded", "Pristine")),
-                    Soil_Treatment = factor(Soil_Treatment, levels = c("AC", "Ash", "Con"))) %>% 
+                    Soil_Treatment = factor(Soil_Treatment, levels = c("Con", "Ash", "AC"))) %>% 
       as.data.frame()
-    fct <- max(df$var)
+    fct <- ifelse(dv %in% c("sqrt_mass", "Carbon"), 3, ifelse(dv == "Nitrogen", 0.5, 1))
     aov <- df %>% anova_test(var ~ Soil_Type * Soil_Treatment)
     model <- lm(var ~ Soil_Type * Soil_Treatment, data = df)
     aov_type <- df %>% 
@@ -133,11 +133,90 @@ anova_analysis <- function(x, dv) {
     } else {
         pairwise_t_test(., var ~ Soil_Treatment, p.adjust.method = "bonferroni")
     }} %>% 
-      add_xy_position(x = "Soil_Type", fun = "mean_sd") %>% 
-      dplyr::mutate(y.position = y.position + (0.05 * fct), 
-                    term = "Soil_Treatment") %>% 
-      dplyr::select(-any_of(c("groups", "n1", "n2", "p.signif", "df", "statistic"))) %>% 
+      add_xy_position(x = "Soil_Type", fun = "mean_sd", step.increase = 0) %>% 
+      dplyr::mutate(y.position = y.position + 0.1 * fct, term = "Soil_Treatment",
+                    p_round = round(p.adj, digits = 3)) %>% 
+      dplyr::select(-any_of(c("groups", "n1", "n2", "p.signif", "df"))) %>% 
       as.data.frame()
+    
+    # pairwise_t_test and pairwise.t.test functions are evil. Corrections made here.
+    if(!all(aov_type$p < 0.05)) {
+      pwc_type <- lapply(unique(df$Soil_Type), function(xx) {
+        df <- df %>% dplyr::filter(Soil_Type == xx)
+        xbar <- tapply(df$var, df$Soil_Treatment, mean, na.rm = TRUE)
+        s <- tapply(df$var, df$Soil_Treatment, sd, na.rm = TRUE)
+        n <- tapply(!is.na(df$var), df$Soil_Treatment, sum)
+        degf <- n - 1
+        total.degf <- sum(degf)
+        pooled.sd <- sqrt(sum(s^2 * degf)/total.degf)
+        compare.levels <- function(i, j) {
+          dif <- xbar[i] - xbar[j]
+          se.dif <- pooled.sd * sqrt(1/n[i] + 1/n[j])
+          t.val <- dif/se.dif
+          return(list(t = t.val, p = 2 * pt(-abs(t.val), total.degf)))
+        }
+        ix <- setNames(seq_along(levels(df$Soil_Treatment)), levels(df$Soil_Treatment))
+        tt <- outer(ix[-1L], ix[-length(ix)], function(ivec, jvec) 
+          vapply(seq_along(ivec), 
+                 function(k) {
+                   i <- ivec[k]
+                   j <- jvec[k]
+                   if (i > j) 
+                     compare.levels(i, j)$t
+                   else NA_real_
+                 }, 0.05))
+        
+        tt_df <- as.data.frame(tt) %>% 
+          rownames_to_column("group2") %>% 
+          pivot_longer(2:3, names_to = "group1", values_to = "statistic") %>% 
+          na.omit()
+        
+        pwc_out <- merge(pwc_type %>% dplyr::filter(Soil_Type == xx), tt_df, 
+                         by = c("group1", "group2"))
+      }) %>% do.call(rbind, .)
+    }
+    
+    pwc_type <- rbind(
+      dplyr::filter(pwc_type, x == 1) %>% 
+        dplyr::mutate(y.position = seq(
+        from = min(.$y.position), by = 0.2 * fct, length.out = 3)),
+      dplyr::filter(pwc_type, x == 2) %>% 
+        dplyr::mutate(y.position = seq(
+        from = min(.$y.position), by = 0.2 * fct, length.out = 3)))
+    
+    pwc_type <- rbind(
+      dplyr::filter(pwc_type, x == 1) %>% 
+        {if(dplyr::slice(., which.min(y.position)) %>% 
+            dplyr::pull(p.adj) >= 0.05 && any(.$p.adj < 0.05)) {
+          tmp <- .
+          min_y <- min(tmp$y.position)
+          n_inc <- nrow(dplyr::filter(tmp, p.adj < 0.05))
+          if(n_inc == 2) {
+            sq <- c(min_y, seq(min_y, by = 0.2 * fct, length.out = n_inc))
+          } else {
+            sq <- rep(min_y, 3)
+          }
+          dplyr::mutate(., y.position = sq)
+        } else . } %>% 
+        {if(.$p.adj[2] >= 0.05) {
+          dplyr::mutate(., y.position = c(y.position[1], y.position[2], y.position[2]))
+        } else . }, 
+      dplyr::filter(pwc_type, x == 2) %>% 
+        {if(dplyr::slice(., which.min(y.position)) %>% 
+            dplyr::pull(p.adj) >= 0.05 && any(.$p.adj < 0.05)) {
+          tmp <- .
+          min_y <- min(tmp$y.position)
+          n_inc <- nrow(dplyr::filter(tmp, p.adj < 0.05))
+          if(n_inc == 2) {
+            sq <- c(min_y, seq(min_y, by = 0.2 * fct, length.out = n_inc))
+          } else {
+            sq <- rep(min_y, 3)
+          }
+          dplyr::mutate(., y.position = sq)
+        } else . } %>% 
+        {if(.$p.adj[2] >= 0.05) {
+          dplyr::mutate(., y.position = c(y.position[1], y.position[2], y.position[2]))
+        } else . })
     
     pwc_treatment <- group_by(df, Soil_Treatment) %>% 
       {if(all(aov_treatment$p < 0.05)) {
@@ -145,10 +224,48 @@ anova_analysis <- function(x, dv) {
     } else {
         pairwise_t_test(., var ~ Soil_Type, p.adjust.method = "bonferroni")
     }} %>% 
-      add_xy_position(x = "Soil_Treatment", fun = "mean_sd") %>% 
-      dplyr::mutate(y.position = y.position + (0.05 * fct), term = "Soil_Type") %>% 
-      dplyr::select(-any_of(c("groups", "n1", "n2", "p.signif", "df", "statistic"))) %>% 
+      add_xy_position(x = "Soil_Treatment", fun = "mean_sd", step.increase = 0) %>% 
+      dplyr::mutate(y.position = y.position + 0.1 * fct, term = "Soil_Type",
+                    p_round = round(p.adj, digits = 3)) %>% 
+      dplyr::select(-any_of(c("groups", "n1", "n2", "p.signif", "df"))) %>% 
       as.data.frame()
+    
+    # pairwise_t_test and pairwise.t.test functions are evil. Corrections made here.
+    if(!all(aov_treatment$p < 0.05)) {
+      pwc_treatment <- lapply(unique(df$Soil_Treatment), function(xx) {
+        df <- df %>% dplyr::filter(Soil_Treatment == xx)
+        xbar <- tapply(df$var, df$Soil_Type, mean, na.rm = TRUE)
+        s <- tapply(df$var, df$Soil_Type, sd, na.rm = TRUE)
+        n <- tapply(!is.na(df$var), df$Soil_Type, sum)
+        degf <- n - 1
+        total.degf <- sum(degf)
+        pooled.sd <- sqrt(sum(s^2 * degf)/total.degf)
+        compare.levels <- function(i, j) {
+          dif <- xbar[i] - xbar[j]
+          se.dif <- pooled.sd * sqrt(1/n[i] + 1/n[j])
+          t.val <- dif/se.dif
+          return(list(t = t.val, p = 2 * pt(-abs(t.val), total.degf)))
+        }
+        ix <- setNames(seq_along(levels(df$Soil_Type)), levels(df$Soil_Type))
+        tt <- outer(ix[-1L], ix[-length(ix)], function(ivec, jvec) 
+          vapply(seq_along(ivec), 
+                 function(k) {
+                   i <- ivec[k]
+                   j <- jvec[k]
+                   if (i > j) 
+                     compare.levels(i, j)$t
+                   else NA_real_
+                 }, 0.05))
+        
+        tt_df <- as.data.frame(tt) %>% 
+          rownames_to_column("group2") %>% 
+          pivot_longer(2, names_to = "group1", values_to = "statistic") %>% 
+          na.omit()
+        
+        pwc_out <- merge(pwc_treatment %>% dplyr::filter(Soil_Treatment == xx), tt_df, 
+                         by = c("group1", "group2"))
+      }) %>% do.call(rbind, .)
+    }
     
     tukey <- df %>% 
       tukey_hsd(var ~ Soil_Type * Soil_Treatment) %>% 
@@ -173,23 +290,37 @@ anova_analysis <- function(x, dv) {
     #   stat_pvalue_manual(pwc_treatment %>% dplyr::filter(p.adj <= 0.05))
     
     p <- ggbarplot(
-      df_sum, x = "Soil_Treatment", y = "mean", fill = "Soil_Type",
+      df_sum, x = "Soil_Type", y = "mean", fill = "Soil_Treatment",
       color = "black", position = position_dodge(0.8), size = 1,
-      width = 0.8, palette = c("#5a5a5a", "#adadad")) + 
+      width = 0.8, palette = c("gray99", "gray66", "gray33")) + 
       geom_errorbar(
         aes(
           ymin = ifelse(mean - sd < 0, 0.02, mean - sd),
           ymax = mean + sd), position = position_dodge2(NULL, padding = 0.6), 
         width = 0.8, size = 1) +
-      stat_pvalue_manual(pwc_treatment %>% dplyr::filter(p.adj <= 0.05), size = 6, 
-                         bracket.size = 1) +
-      scale_x_discrete(labels = c(AC = "AC", Ash = "Ash", Con = "Control")) +
+      {if(nrow(pwc_type %>% dplyr::filter(p.adj < 0.05, p.adj >= 0.001)) > 0) {
+        geom_bracket(
+        aes(xmin = xmin, xmax = xmax, label = paste0("list(~italic(p)==", p_round, ")")),
+        data = pwc_type %>% dplyr::filter(p.adj < 0.05, p.adj >= 0.001), 
+        type = "expression", size = 1, label.size = 3.5, 
+        y.position = pwc_type %>% 
+          dplyr::filter(p.adj < 0.05, p.adj >= 0.001) %>% 
+          dplyr::pull(y.position))}} + 
+      {if(nrow(pwc_type %>% dplyr::filter(p.adj < 0.05, p.adj < 0.001)) > 0) {
+        geom_bracket(
+        aes(xmin = xmin, xmax = xmax, label = "list(~italic(p)<0.001)"),
+        data = pwc_type %>% dplyr::filter(p.adj < 0.05, p.adj < 0.001), 
+        type = "expression", size = 1, label.size = 3.5, 
+        y.position = pwc_type %>% 
+          dplyr::filter(p.adj < 0.05, p.adj < 0.001) %>% 
+          dplyr::pull(y.position))}} +
+      # scale_x_discrete(labels = c(AC = "AC", Ash = "Ash", Con = "Control")) +
       scale_y_continuous(
         expand = c(0, 0), 
-        limits = c(0, ifelse(grepl("mass", dv), 3.25, 1.2)),
+        limits = c(0, ifelse(grepl("mass", dv), 4, 1.5)),
         breaks = {if(grepl("mass", dv)) waiver() else seq(0, 1, 0.25)}) +
       ggtitle(ifelse(i == "RF", "Rough Fescue", "Spotted Knapweed")) +
-      xlab("Soil Treatment") +
+      xlab("Soil Type") +
       ylab(ifelse(dv == "germ_rat", expression(bold(sqrt("Germination Rate"))), 
                   ifelse(dv == "sqrt_mass", expression(bold(sqrt("Biomass (g)"))), "error"))) +
       theme_classic(base_size = 16) +
@@ -209,10 +340,10 @@ anova_analysis <- function(x, dv) {
         axis.line = element_line(size = 1), 
         plot.title = element_text(face = "bold", hjust = 0.5)) +
       scale_fill_manual(
-        values = c("#5a5a5a", "#adadad"),
-        breaks = c("Invaded", "Pristine"),
-        labels = c("Invaded", "Pristine"),
-        name = "Soil Type:")
+        values = c("gray99", "gray66", "gray33"),
+        breaks = c("Con", "Ash", "AC"),
+        labels = c("Control", "Ash", "Activated Carbon"),
+        name = "Soil Treatment:")
     
     return(list(data = df, two_way = aov, tukey = tukey, one_way_type = aov_type,
                 one_way_treatment = aov_treatment, pwc_type = pwc_type, 
@@ -261,18 +392,22 @@ anova_treatment <- lapply(bmass_analysis, function(x) {
 pwc_type <- lapply(bmass_analysis, function(x) {
   x$pwc_type %>% 
     rename_with(~str_c(., "_", paste0(x$data$Species[1])), where(is.numeric))}) %>% 
-  Reduce(f = function(x, y) merge(x, y), x = .) %>% 
+  Reduce(f = function(x, y) merge(x, y, by = c("Soil_Type", "group1", "group2"),
+                                  suffixes = c("", ".y")), x = .) %>% 
   dplyr::select(sort(tidyselect::peek_vars())) %>% 
   dplyr::relocate(Soil_Type, term, .y., group1, group2) %>% 
-  dplyr::relocate(starts_with("p.adj"), .after = starts_with("p_"))
+  dplyr::relocate(starts_with("p.adj"), .after = starts_with("p_")) %>% 
+  dplyr::select(-ends_with(".y"))
 
 pwc_treatment <- lapply(bmass_analysis, function(x) {
   x$pwc_treatment %>% 
     rename_with(~str_c(., "_", paste0(x$data$Species[1])), where(is.numeric))}) %>% 
-  Reduce(f = function(x, y) merge(x, y), x = .) %>% 
+  Reduce(f = function(x, y) merge(x, y, by = c("Soil_Treatment", "group1", "group2"),
+                                  suffixes = c("", ".y")), x = .) %>% 
   dplyr::select(sort(tidyselect::peek_vars())) %>% 
   dplyr::relocate(Soil_Treatment, term, .y., group1, group2) %>% 
-  dplyr::relocate(starts_with("p.adj"), .after = starts_with("p_"))
+  dplyr::relocate(starts_with("p.adj"), .after = starts_with("p_")) %>% 
+  dplyr::select(-ends_with(".y"))
 
 # In both cases, there is a strong 'Soil_Treatment' effect, and a slight interaction
 # effect ('Soil_Type:Soil_Treatment').
@@ -385,16 +520,16 @@ Now, plot biomass separated by species. There is also the option of adding an im
 
 ```{r Biomass separated}
 
-rf_img <- image_read(
-  "https://live.staticflickr.com/2426/3990317298_1cfbb2e31f_o_d.jpg") %>% 
-  image_rotate(90) %>% 
-  as.raster()
-rf_img_ar <- ncol(rf_img) / nrow(rf_img)
-
-sk_img <- image_read(
-  "https://upload.wikimedia.org/wikipedia/commons/2/2d/Centaurea_maculosa_Bozeman.jpg") %>% 
-  as.raster()
-sk_img_ar <- ncol(rf_img) / nrow(rf_img)
+# rf_img <- image_read(
+#   "https://live.staticflickr.com/2426/3990317298_1cfbb2e31f_o_d.jpg") %>% 
+#   image_rotate(90) %>% 
+#   as.raster()
+# rf_img_ar <- ncol(rf_img) / nrow(rf_img)
+# 
+# sk_img <- image_read(
+#   "https://upload.wikimedia.org/wikipedia/commons/2/2d/Centaurea_maculosa_Bozeman.jpg") %>% 
+#   as.raster()
+# sk_img_ar <- ncol(rf_img) / nrow(rf_img)
 
 biomass_plot <- ggarrange(plotlist = list(bmass_analysis$RF$plot,
                                           bmass_analysis$SK$plot), 
@@ -402,16 +537,16 @@ biomass_plot <- ggarrange(plotlist = list(bmass_analysis$RF$plot,
   ggsave(file.path(plot_dir, "bmass.png"), width = 6, height = 3, dpi = 300)
 
 # If images are to be included, run the following lines:
-final <- biomass_plot + 
-  annotation_raster(rf_img, xmin = 0.14, 
-                    xmax = 0.24,
-                    ymin = 0.65,
-                    ymax = 0.88) + 
-  annotation_raster(sk_img, xmin = 0.64, 
-                    xmax = 0.74,
-                    ymin = 0.65,
-                    ymax = 0.88) + 
-  ggsave(file.path(plot_dir, "bmass_with_images.png"), width = 6, height = 3, dpi = 300)
+# final <- biomass_plot + 
+#   annotation_raster(rf_img, xmin = 0.14, 
+#                     xmax = 0.24,
+#                     ymin = 0.65,
+#                     ymax = 0.88) + 
+#   annotation_raster(sk_img, xmin = 0.64, 
+#                     xmax = 0.74,
+#                     ymin = 0.65,
+#                     ymax = 0.88) + 
+#   ggsave(file.path(plot_dir, "bmass_with_images.png"), width = 6, height = 3, dpi = 300)
 
 ```
 
@@ -504,7 +639,7 @@ germ_surv_norm <- lapply(surv_assum$germ_surv, "[[", "shapiro_whole") %>%
   do.call(rbind, .) %>% rownames_to_column("Species")
 
 # No simple data transformations worked - use Friedman tests for non-parametric 
-# two way ANOVA's
+# two way ANOVA's -- NOT REALLY CORRECT, USE ALIGNED RANK TRANSFORMATION
 
 germ_rat_analysis <- anova_analysis(do.call(rbind, lapply(surv_assum$germ_rat, "[[", "data")), "germ_rat")
 
@@ -556,61 +691,100 @@ surv_trans <- group_by(surv, Soil_Type, Soil_Treatment, Species) %>%
 art_custom <- function(x, dv) {
   
   sapply(unique(x$Species), function(i) {
+    
+    # Create data frame to generate stats and figures from for a single species
     df <- x %>% 
       dplyr::select(-germ_rat) %>% 
       dplyr::filter(Species == i) %>% 
       dplyr::rename(var = sym(dv)) %>% 
       droplevels() %>% 
       dplyr::mutate(Soil_Type = factor(Soil_Type, levels = c("Invaded", "Pristine")),
-                    Soil_Treatment = factor(Soil_Treatment, levels = c("AC", "Ash", "Con")))
+                    Soil_Treatment = factor(Soil_Treatment, levels = c("Con", "Ash", "AC")))
     
     # Perform aligned rank transformation (ART)
     m <- art(var ~ Soil_Type * Soil_Treatment, data = df)
     anova <- anova(m, response = "art") %>% broom::tidy()
     
-    # These are good
-    main_type <- contrast(emmeans(artlm(m, "Soil_Treatment"), ~ Soil_Treatment), 
-                         adjust = "bonferroni") %>% data.frame()
-    main_trt <- contrast(emmeans(artlm(m, "Soil_Type"), ~ Soil_Type), 
-                         adjust = "bonferroni") %>% data.frame()
+    # Generate linear model objects of each factor from the main ART model
+    m.type <- artlm(m, "Soil_Type")
+    m.trt <- artlm(m, "Soil_Treatment")
     
-    # PWC's are good!
-    pwc_type <- contrast(emmeans(artlm(m, "Soil_Treatment"), ~ Soil_Treatment, by = "Soil_Type"),
-                        method = "pairwise", interaction = TRUE, 
-                        adjust = "bonferroni") %>% data.frame() %>% 
-      tidyr::separate(Soil_Treatment_pairwise, c("group1", "group2")) %>% 
-      dplyr::mutate(across(c(group1, group2), ~trimws(.x)))
+    # Perform analysis of main effects. Function joint_tests() will test the
+    # contrasts among EMMs instead of the coefficients. These are most closely
+    # related to type III tests and return F values - this was hours of research
+    main_type <- joint_tests(m.type, by = "Soil_Treatment") %>% as.data.frame()
+    main_trt <- joint_tests(m.trt, by = "Soil_Type") %>% as.data.frame()
     
-    pwc_trt <- contrast(emmeans(artlm(m, "Soil_Type"), ~ Soil_Type, by = "Soil_Treatment"),
-                        method = "pairwise", interaction = TRUE, 
-                        adjust = "bonferroni") %>% data.frame() %>% 
-      tidyr::separate(Soil_Type_pairwise, c("group1", "group2")) %>% 
-      dplyr::mutate(across(c(group1, group2), ~trimws(.x)))
-    
-    # Method for adding proper significance labels
-    pwc_type_data <- artlm(m, "Soil_Type")$model
-    pwc_type_emmeans <- pwc_type_data %>% 
-      group_by(Soil_Type) %>% 
-      emmeans_test(.y ~ Soil_Treatment, p.adjust.method = "bonferroni") %>% 
-      add_xy_position(x = "Soil_Treatment", fun = "mean_sd") %>% 
-      dplyr::mutate(y.position = y.position + (0.05 * max(pwc_type_data$.y)))
-    
-    pwc_trt_data <- artlm(m, "Soil_Treatment")$model
-    pwc_trt_emmeans <- pwc_trt_data %>% 
+    # Create pairwise comparisons for each factor using emmeans package
+    pwc_type_emmeans <- m.type$model %>% 
       group_by(Soil_Treatment) %>% 
       emmeans_test(.y ~ Soil_Type, p.adjust.method = "bonferroni") %>% 
-      add_xy_position(x = "Soil_Treatment", fun = "mean_sd") %>% 
-      dplyr::mutate(y.position = y.position + (0.05 * max(pwc_type_data$.y)))
+      add_xy_position(x = "Soil_Treatment", fun = "mean_sd", step.increase = 0) %>% 
+      dplyr::mutate(y.position = y.position + 8)
+    
+    pwc_trt_emmeans <- m.trt$model %>% 
+      group_by(Soil_Type) %>% 
+      emmeans_test(.y ~ Soil_Treatment, p.adjust.method = "bonferroni") %>% 
+      add_xy_position(x = "Soil_Type", fun = "mean_sd", step.increase = 0) %>% 
+      dplyr::mutate(y.position = y.position + 8)
+    
+    # Method for adding proper significance labels
+    pwc_trt_emmeans <- rbind(
+      dplyr::filter(pwc_trt_emmeans, x == 1) %>% 
+        dplyr::mutate(y.position = seq(
+        from = min(.$y.position), by = 14, length.out = 3)),
+      dplyr::filter(pwc_trt_emmeans, x == 2) %>% 
+        dplyr::mutate(y.position = seq(
+        from = min(.$y.position), by = 14, length.out = 3)))
     
     # Join actual PWC's to the emmeans ones to get proper significance labels
-    pwc_type_join <- merge(pwc_type, pwc_type_emmeans) %>% 
-      add_significance("p.value") %>% 
-      dplyr::select(-c(p, p.adj, p.adj.signif, statistic, groups))
+    pwc_trt_join <- dplyr::select(pwc_trt_emmeans, -groups) %>% 
+      dplyr::mutate(p_round = round(p.adj, digits = 3))
     
-    pwc_trt_join <- merge(pwc_trt, pwc_trt_emmeans) %>% 
-      add_significance("p.value") %>% 
-      dplyr::select(-c(p, p.adj, p.adj.signif, statistic, groups))
-      # droplevels()
+    # Adjust y.position so that everything is tight
+    pwc_trt_join <- rbind(
+      dplyr::filter(pwc_trt_join, x == 1) %>% 
+        {if(dplyr::slice(., which.min(y.position)) %>% 
+            dplyr::pull(p.adj) >= 0.05 && any(.$p.adj < 0.05)) {
+          tmp <- .
+          min_y <- min(tmp$y.position)
+          n_inc <- nrow(dplyr::filter(tmp, p.adj < 0.05))
+          if(n_inc == 2) {
+            sq <- c(min_y, seq(min_y, by = 14, length.out = n_inc))
+          } else {
+            sq <- rep(min_y, 3)
+          }
+          dplyr::mutate(., y.position = sq)
+        } else . } %>% 
+        {if(.$p.adj[2] >= 0.05) {
+          dplyr::mutate(., y.position = c(y.position[1], y.position[1], y.position[2]))
+        } else . }, 
+      dplyr::filter(pwc_trt_join, x == 2) %>% 
+        {if(dplyr::slice(., which.min(y.position)) %>% 
+            dplyr::pull(p.adj) >= 0.05 && any(.$p.adj < 0.05)) {
+          tmp <- .
+          min_y <- min(tmp$y.position)
+          n_inc <- nrow(dplyr::filter(tmp, p.adj < 0.05))
+          if(n_inc == 2) {
+            sq <- c(min_y, seq(min_y, by = 14, length.out = n_inc))
+          } else {
+            sq <- rep(min_y, 3)
+          }
+          dplyr::mutate(., y.position = sq)
+        } else . } %>% 
+        {if(.$p.adj[2] >= 0.05) {
+          dplyr::mutate(., y.position = c(y.position[1], y.position[1], y.position[2]))
+        } else . }
+    )
+    
+    pwc_type_join <- dplyr::select(pwc_type_emmeans, -groups) %>% 
+      dplyr::mutate(p_round = round(p.adj, digits = 3)) %>% 
+      group_by(x) %>% 
+      {if(dplyr::slice(., which.min(y.position)) %>% 
+          dplyr::pull(p.adj) > 0.05) {
+        dplyr::mutate(., y.position = min(y.position))
+          } else .} %>% 
+      ungroup()
     
     # Place transformed data back into input df
     df <- dplyr::select(df, Soil_Type, Soil_Treatment, Species, var) %>% 
@@ -618,42 +792,44 @@ art_custom <- function(x, dv) {
                     soil_trt_aligned_ranks = m$aligned.ranks$Soil_Treatment,
                     all_aligned_ranks = m$aligned.ranks$`Soil_Type:Soil_Treatment`)
     
-    # Create box plots
-    # bxp_type <- ggboxplot(
-    #   df, x = "Soil_Type", y = "soil_type_aligned_ranks", 
-    #   color = "Soil_Treatment", palette = "jco") + 
-    #   stat_pvalue_manual(pwc_type_join %>% dplyr::filter(p.value <= 0.05), 
-    #                      label = "p.value.signif")
-    # 
-    # bxp_treatment <- ggboxplot(
-    #   df, x = "Soil_Treatment", y = "soil_trt_aligned_ranks",
-    #   color = "Soil_Type", palette = "jco") +
-    #   stat_pvalue_manual(pwc_trt_join %>% dplyr::filter(p.value <= 0.05),
-    #                      label = "p.value.signif")
-    
-    # Create bar plots
-    pwc_trt_data_sum <- artlm(m, "Soil_Treatment")$model %>% 
+    # Create dataframes for bar plots
+    pwc_trt_data_sum <- m.trt$model %>% 
       group_by(Soil_Type, Soil_Treatment) %>% 
       summarise(across(.y, list(mean = ~mean(.x, na.rm = TRUE),
                                 sd = ~sd(.x, na.rm = TRUE)), 
                        .names = "{.fn}"), .groups = "drop")
-      # droplevels() %>%
-      # arrange(Soil_Type, Soil_Treatment)
     
+    pwc_type_data_sum <- m.type$model %>% 
+      group_by(Soil_Type, Soil_Treatment) %>% 
+      summarise(across(.y, list(mean = ~mean(.x, na.rm = TRUE),
+                                sd = ~sd(.x, na.rm = TRUE)), 
+                       .names = "{.fn}"), .groups = "drop")
+    
+    # Create bar plots
     p <- ggbarplot(
-      pwc_trt_data_sum, x = "Soil_Treatment", y = "mean", fill = "Soil_Type",
+      pwc_trt_data_sum, x = "Soil_Type", y = "mean", fill = "Soil_Treatment",
       color = "black", position = position_dodge(0.8), size = 1,
-      width = 0.8, palette = c("#5a5a5a", "#adadad")) + 
+      width = 0.8, palette = c("gray99", "gray66", "gray33")) + 
       geom_errorbar(
         aes(
           ymin = ifelse(mean - sd < 0, 2, mean - sd),
           ymax = mean + sd), position = position_dodge2(NULL, padding = 0.6), 
         width = 0.8, size = 1) +
-      stat_pvalue_manual(pwc_trt_join %>% dplyr::filter(p.value <= 0.05), size = 6, 
-                         bracket.size = 1, label = "p.value.signif") +
-      scale_x_discrete(labels = c(AC = "AC", Ash = "Ash", Con = "Control")) +
+      # Add brackets above bars. Where p > 0.001, use a "=" sign.
+      {if(nrow(pwc_trt_join %>% dplyr::filter(p.adj < 0.05, p.adj >= 0.001)) > 0) {
+        geom_bracket(
+        aes(xmin = xmin, xmax = xmax, label = paste0("list(~italic(p)==", p_round, ")")),
+        data = pwc_trt_join %>% dplyr::filter(p.adj < 0.05, p.adj >= 0.001), 
+        type = "expression", size = 1, label.size = 3.5)}} + 
+      # Add brackets above bars. Where p > 0.001, use a "<" sign.
+      {if(nrow(pwc_trt_join %>% dplyr::filter(p.adj < 0.05, p.adj < 0.001)) > 0) {
+        geom_bracket(
+        aes(xmin = xmin, xmax = xmax, label = "list(~italic(p)<0.001)"),
+        data = pwc_trt_join %>% dplyr::filter(p.adj < 0.05, p.adj < 0.001), 
+        type = "expression", size = 1, label.size = 3.5)}} + 
+      # scale_x_discrete(labels = c(AC = "AC", Ash = "Ash", Con = "Control")) +
       ggtitle(ifelse(i == "RF", "Rough Fescue", "Spotted Knapweed")) +
-      xlab("Soil Treatment") +
+      xlab("Soil Type") +
       ylab(ifelse(dv == "germ_rat", expression(bold(sqrt("Germination Rate"))), 
                   case_when(
         dv == "deaths" ~ "ART (Death Rate)",
@@ -678,12 +854,12 @@ art_custom <- function(x, dv) {
         plot.title = element_text(face = "bold", hjust = 0.5)) +
       scale_y_continuous(
         expand = c(0, 0), 
-        limits = c(0, 79)) +
+        limits = c(0, 100)) +
       scale_fill_manual(
-        values = c("#5a5a5a", "#adadad"),
-        breaks = c("Invaded", "Pristine"),
-        labels = c("Invaded", "Pristine"),
-        name = "Soil Type:")
+        values = c("gray99", "gray66", "gray33"),
+        breaks = c("Con", "Ash", "AC"),
+        labels = c("Control", "Ash", "Activated Carbon"),
+        name = "Soil Treatment:")
     
     return(list(
       data = df, model = m, two_way = anova, main_type = main_type,
@@ -959,7 +1135,7 @@ el_analysis_anova_treatment <- lapply(el_anova, function(x) {
 el_analysis_pwc_type <- lapply(el_anova, function(x) {
   x$pwc_type %>% 
     rename_with(~str_c(., "_", paste0(names(x$data)[4])), where(is.numeric))}) %>% 
-  Reduce(f = function(x, y) merge(x, y), x = .) %>% 
+  Reduce(f = function(x, y) merge(x, y, by = c("Soil_Type", "group1", "group2")), x = .) %>% 
   dplyr::select(sort(tidyselect::peek_vars())) %>% 
   dplyr::relocate(Soil_Type, term, .y., group1, group2) %>% 
   dplyr::relocate(starts_with("p.adj"), .after = starts_with("p_"))
@@ -967,7 +1143,7 @@ el_analysis_pwc_type <- lapply(el_anova, function(x) {
 el_analysis_pwc_treatment <- lapply(el_anova, function(x) {
   x$pwc_treatment %>% 
     rename_with(~str_c(., "_", paste0(names(x$data)[4])), where(is.numeric))}) %>% 
-  Reduce(f = function(x, y) merge(x, y), x = .) %>% 
+  Reduce(f = function(x, y) merge(x, y, by = c("Soil_Treatment", "group1", "group2")), x = .) %>% 
   dplyr::select(sort(tidyselect::peek_vars())) %>% 
   dplyr::relocate(Soil_Treatment, term, .y., group1, group2) %>% 
   dplyr::relocate(starts_with("p.adj"), .after = starts_with("p_"))
@@ -1000,14 +1176,30 @@ write.csv(el_analysis_pwc_treatment, file.path(
 analyzer_plots <- sapply(c("Nitrogen", "Carbon", "Hydrogen"), function(x) {
   df <- dplyr::select(analyzer, c(Soil_Type, Soil_Treatment, all_of(x))) %>% 
     unite(trt, c("Soil_Type", "Soil_Treatment"), remove = FALSE) %>% 
-    dplyr::mutate(Soil_Treatment = factor(Soil_Treatment, levels = c("AC", "Ash", "Con"))) %>% 
+    droplevels() %>% 
+    dplyr::mutate(Soil_Treatment = factor(Soil_Treatment, levels = c("Con", "Ash", "AC"))) %>% 
     dplyr::rename(data = 4)
   
-  p <- ggplot(df, aes(Soil_Type, data, fill = Soil_Treatment)) +
-    geom_boxplot(lwd = 0.6, color = "black", width = 1) +
+  pwc <- el_anova[[x]]$pwc_type
+  
+  p <- ggboxplot(df, x = "Soil_Type", y = "data", fill = "Soil_Treatment", 
+                 width = 0.7, color = "black", palette = c("gray99", "gray66", "gray33"),
+                 size = 0.5, fatten = 1) +
+    # Add brackets above bars. Where p > 0.001, use a "=" sign.
+    {if(nrow(pwc %>% dplyr::filter(p.adj < 0.05, p.adj >= 0.001)) > 0) {
+      geom_bracket(
+        aes(xmin = xmin, xmax = xmax, label = paste0("list(~italic(p)==", p_round, ")")),
+        data = pwc %>% dplyr::filter(p.adj < 0.05, p.adj >= 0.001), 
+        type = "expression", size = 1, label.size = 3.5)}} + 
+    # Add brackets above bars. Where p > 0.001, use a "<" sign.
+    {if(nrow(pwc %>% dplyr::filter(p.adj < 0.05, p.adj < 0.001)) > 0) {
+      geom_bracket(
+        aes(xmin = xmin, xmax = xmax, label = "list(~italic(p)<0.001)"),
+        data = pwc %>% dplyr::filter(p.adj < 0.05, p.adj < 0.001), 
+        type = "expression", size = 1, label.size = 3.5)}} +
     xlab("Soil Type") +
     ylab(paste0("Total ", x, " (%)"))  +
-    theme_classic(base_size = 14) +
+    theme_classic(base_size = 16) +
     theme(
       text = element_text(family="Times New Roman"), 
       legend.position = c(0.18, 0.88),
@@ -1024,17 +1216,18 @@ analyzer_plots <- sapply(c("Nitrogen", "Carbon", "Hydrogen"), function(x) {
       axis.line = element_line(size = 1)) +
     scale_fill_manual(
       values = c("gray99", "gray66", "gray33"),
-      breaks = c("AC", "Ash", "Con"),
-      labels = c("Control", "Activated Carbon", "Ash"), 
+      breaks = c("Con", "Ash", "AC"),
+      labels = c("Control", "Ash", "Activated Carbon"), 
       name = "Soil Amendment:") +
     scale_x_discrete(labels = c(INV = "Invaded", PRI = "Pristine")) +
     scale_y_continuous(
       expand = c(0, 0), 
       limits = c(
         ifelse(max(df$data) < 1 | max(df$data) - min(df$data) < 1, 
-               round(min(df$data) - 0.1, digits = 1), min(floor(df$data))),
+               round(min(df$data) - 0.05, digits = 2), min(floor(df$data))),
         ifelse(max(df$data) < 1 | max(df$data) - min(df$data) < 1, 
-               round(max(df$data) + 0.1, digits = 1), max(ceiling(df$data)))))
+               round(max(df$data) + 0.15, digits = 2), max(ceiling(df$data)))))
+  
 }, simplify = FALSE, USE.NAMES = TRUE)
 
 # Arrange final plot of carbon and nitrogen only
